   Creative Commons, 559 Nathan Abbott Way, Stanford, California 94305,
   USA.  A summary of the license and the full legal text is included
   in file: COPYING.  If you wish to distribute some or all of this work
   under different terms, please contact respective author(s).
   The license applies to all entries newer than 2009-04-28.
*/


2014-04-15 17:17 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r289)
  * hbqt/qtbluetooth/hbqt_init.cpp
    + Added: methods to execute various signals.

2014-04-10 18:50 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r288)
  * hbqt/hbmk2_qt.hb
    + Added: qint8 and quint8.

  + hbqt/qtbluetooth
    + Added: Qt 5.2 introduced QtBluetooth module.

  + hbqt/qtbluetooth/doc
  + hbqt/qtbluetooth/doc/en
  + hbqt/qtbluetooth/doc/en/class_qbluetoothaddress.txt
  + hbqt/qtbluetooth/doc/en/class_qbluetoothdevicediscoveryagent.txt
  + hbqt/qtbluetooth/doc/en/class_qbluetoothdeviceinfo.txt
  + hbqt/qtbluetooth/doc/en/class_qbluetoothhostinfo.txt
  + hbqt/qtbluetooth/doc/en/class_qbluetoothlocaldevice.txt
  + hbqt/qtbluetooth/doc/en/class_qbluetoothserver.txt
  + hbqt/qtbluetooth/doc/en/class_qbluetoothservicediscoveryagent.txt
  + hbqt/qtbluetooth/doc/en/class_qbluetoothserviceinfo.txt
  + hbqt/qtbluetooth/doc/en/class_qbluetoothsocket.txt
  + hbqt/qtbluetooth/doc/en/class_qbluetoothtransfermanager.txt
  + hbqt/qtbluetooth/doc/en/class_qbluetoothtransferreply.txt
  + hbqt/qtbluetooth/doc/en/class_qbluetoothtransferrequest.txt
  + hbqt/qtbluetooth/doc/en/class_qbluetoothuuid.txt
  + hbqt/qtbluetooth/hbqt_init.cpp
  + hbqt/qtbluetooth/hbqtbluetooth.ch
  + hbqt/qtbluetooth/hbqtbluetooth.hbc
  + hbqt/qtbluetooth/hbqtbluetooth.hbm
  + hbqt/qtbluetooth/hbqtbluetooth.hbp
  + hbqt/qtbluetooth/hbqtbluetooth.hbx
  + hbqt/qtbluetooth/hbqtbluetooths.hbp
  + hbqt/qtbluetooth/qth
  + hbqt/qtbluetooth/qth/filelist.hbm
  + hbqt/qtbluetooth/qth/QBluetoothAddress.qth
  + hbqt/qtbluetooth/qth/QBluetoothDeviceDiscoveryAgent.qth